# ru-py-delivery-test

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
src/: main.rs
