[package]
name = "ru-py-delivery-test"
version = "0.1.6"
edition = "2024"
description = "A minimal Rust CLI shipped to Python users as a wheel"
license = "MIT"
repository = "https://github.com/simone-viozzi/ru-py-delivery-test"
homepage = "https://github.com/simone-viozzi/ru-py-delivery-test"
documentation = "https://github.com/simone-viozzi/ru-py-delivery-test"
readme = "README.md"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
git2 = { version = "0.20.2", features = ["vendored-libgit2"] }


# One logical feature that forces the whole stack —libgit2 **and**
# openssl-sys— to build from source and link statically.  Nothing
# else in your crate has to know about OpenSSL.
[features]
vendored-openssl = [
    "git2/vendored-openssl",
]


[package.metadata.maturin]
bindings = "bin"
