[package]
name = "ru-py-delivery-test"
version = "0.1.20"
edition = "2024"
description = "A minimal Rust CLI shipped to Python users as a wheel"
license = "MIT"
repository = "https://github.com/simone-viozzi/ru-py-delivery-test"
homepage = "https://github.com/simone-viozzi/ru-py-delivery-test"
documentation = "https://github.com/simone-viozzi/ru-py-delivery-test"
readme = "README.md"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
git2 = { version = "0.20", default-features = false, features = [
    "vendored-openssl",
    "vendored-libgit2",
] }
openssl = { version = "0.10", features = ["vendored"] }

[package.metadata.maturin]
bindings = "bin"
