[build-system]
requires = ["maturin>=1.6"]
build-backend = "maturin"

[project]
name            = "hello-maturin"
version         = "0.1.0"
description     = "Minimal Rust CLI shipped to Python users as a wheel"
requires-python = ">=3.10"
authors         = [{ name="Your Name", email="you@example.com" }]
classifiers     = ["License :: OSI Approved :: MIT License"]
